# qgama21

./: CMakeLists.txt
qgama-plugins/adjustmentdemoplugin/: CMakeLists.txt
qgama-plugins/dbdemoplugin/: CMakeLists.txt
